--- a/style.css
+++ b/style.css
@@ -13,4 +13,197 @@
   /* ### Neutral */
 
   --White: hsl(0, 0%, 100%);
+  --text-body: "Open Sans", sans-serif;
+  --text-headings: "Raleway", sans-serif;
+}
+
+/* reset */
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* Structure */
+
+body {
+  background-color: var(--Dark-Blue-background);
+  color: var(--White);
+}
+
+header {
+  padding: 73px 80px;
+}
+
+/* header */
+
+.inner-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 52px;
+}
+
+.inner-header nav {
+  display: flex;
+  gap: 55px;
+  font-family: var(--text-headings);
+}
+
+/* secure location */
+
+.secure-location {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  font-family: var(--text-headings);
+}
+
+.secure-location-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 38px;
+}
+
+.secure-location img {
+  width: 720px;
+}
+
+.secure-location-text {
+  display: flex;
+  flex-direction: column;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.secure-location h1 {
+  font-weight: bold;
+  font-size: 40px;
+  width: 734px;
+  text-align: center;
+}
+
+.secure-location p {
+  font-size: 20px;
+  width: 589px;
+  text-align: center;
+}
+
+.secure-location button {
+  width: 280px;
+  height: 56px;
+  background-color: var(--Blue-inside-call-to-action-gradient);
+  color: var(--White);
+  border-radius: 30px;
+  border: none;
+  font-size: 16px;
+}
+
+/* trsut section */
+
+.trust {
+  padding: 158px 280px;
+  display: flex;
+  justify-content: center;
+}
+
+.inner-trust {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 157px;
+}
+
+.features {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 384px;
+  gap: 9px;
+}
+
+.features img {
+  margin-bottom: 5px;
+}
+
+.features h3 {
+  font-family: var(--text-headings);
+  font-size: 20px;
+}
+
+.features p {
+  font-family: var(--text-body);
+  font-size: 14px;
 }
